--- a/my_server/.env
+++ b/my_server/.env
@@ -2,7 +2,7 @@ PORT = 5000
 SCHEMA = vacation_db
 PORT_DB = 3306
 HOST = localhost
-USER = sapirfeider
-PASSWORD = Sapir1995
+USER = ofirshlomo
+PASSWORD = ofir 
 CONNECTIONLIMIT = 10 
 SECRET = SECRET1
